enumcapsulate/tests/expand-macros/as_variant_mut/fail/struct.err.txt
error: Only enums can use this derive
 --> /tests/expand-macros/as_variant_mut/fail/struct.rs:4:12
  |
4 | pub struct Struct {
  |            ^^^^^^
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
